--- a/exercicio02_DOM/questao6.html
+++ b/exercicio02_DOM/questao6.html
@@ -42,15 +42,16 @@
 
     <button type="button" id="enviarBtn">Enviar Seleção</button>
 
-    <h1>Questão 07</h1>
+    <h1>Questão 07 e 08</h1>
     <div>
         <input type="text" name="" id="nomeHastag" placeholder="digite sua hastag">
         <button id="btnAdicionar">Adicionar</button>
     </div>
-    <br>
+    
     
     <div class = "oculto" id="mensagemErro2"></div>
 
+    <br>
     <div>
         <select name="lista-de-hastag" id="hastags" size="5">
             <option value="">Selecione</option>
