--- a/exercicio02_DOM/questao6-7-8-9.html
+++ b/exercicio02_DOM/questao6-7-8-9.html
@@ -42,10 +42,11 @@
 
     <button type="button" id="enviarBtn">Enviar Seleção</button>
 
-    <h1>Questão 07 e 08</h1>
+    <h1>Questão 07, 08 e 09</h1>
     <div>
         <input type="text" name="" id="nomeHastag" placeholder="digite sua hastag">
         <button id="btnAdicionar">Adicionar</button>
+        <button id="btnRemover">Remover</button>
     </div>
     
     
