--- a/exercicio02_DOM/questao12-13.html
+++ b/exercicio02_DOM/questao12-13.html
@@ -27,7 +27,7 @@
             </tr>
         </thead>
        
-        <tbody id="data-id">
+        <tbody id="conteudo">
         <!-- Linhas da tabela serão adicionadas aqui -->
            
         </tbody>
