--- a/exercicio02_DOM/questao1_a_5.html
+++ b/exercicio02_DOM/questao1_a_5.html
@@ -22,9 +22,11 @@
    <h1>Questão 03</h1>
     <h3>Taxa de Engajamento</h3>
     <label for="interacoes">Número de interações:</label>
-    <input type="number" id="numeroInteracoes">
+    <!-- <input type="number" id="numeroInteracoes"> -->
+     <input type="text" name="caixa-texto" id="numeroInteracoes">
     <label for="interacoes">Número de Visualizações:</label>
-    <input type="number" id="numeroVisualizacoes">
+    <!-- <input type="number" id="numeroVisualizacoes"> -->
+    <input type="text" name="" id="numeroVisualizacoes">
     <button id="calcularTaxa">Calcular</button> <br>
     <div id="resultadoTaxa"></div>
 
